force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/FSM_DCFLineItemNonInfra__c.object-meta.xml
<CustomObject>
    <description>Created as part of SFS-35</description>
    <label>Data Capture Form Line Item Non Infra</label>
    <nameField>
        <displayFormat>DCFLI-{0000}</displayFormat>
        <label>Data Capture Form Line Item Non Infra Nu</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Capture Form Line Item Non Infras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>