force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/fields/FSM_DataCaptureFormNonInfra__c.field-meta.xml
<CustomField>
    <fullName>FSM_DataCaptureFormNonInfra__c</fullName>
    <description>SFI-35</description>
    <label>Data Capture Form Non Infra</label>
    <referenceTo>FSM_DataCaptureFormNonInfra__c</referenceTo>
    <relationshipLabel>Data Capture Form Line Item Non Infras</relationshipLabel>
    <relationshipName>FSM_DataCaptureFormLineItemNonInfras</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>