force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/fields/FSM_IsParentLineItem__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsParentLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-2041</description>
    <label>Is Parent Line Item?</label>
    <type>Checkbox</type>
</CustomField>