force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/fields/FSM_LineItem__c.field-meta.xml
<CustomField>
    <fullName>FSM_LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-2041</description>
    <label>Line Item</label>
    <referenceTo>FSM_DCFLineItemNonInfra__c</referenceTo>
    <relationshipLabel>Data Capture Form Line Item Non Infras</relationshipLabel>
    <relationshipName>Data_Capture_Form_Line_Item_Non_Infras</relationshipName>
    <type>Lookup</type>
</CustomField>