force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-35</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Data Capture Form Line Item Non Infras</relationshipLabel>
    <relationshipName>FSM_DataCaptureFormLineItemNonInfras</relationshipName>
    <type>Lookup</type>
</CustomField>