force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/recordTypes/FSM_ValveManagement.recordType-meta.xml
<RecordType>
    <fullName>FSM_ValveManagement</fullName>
    <active>true</active>
    <description>SFI-35</description>
    <label>Valve Management</label>
</RecordType>