force-app/main/default/objects/FSM_DCFLineItemNonInfra__c/recordTypes/FSM_ValveSection.recordType-meta.xml
<RecordType>
    <fullName>FSM_ValveSection</fullName>
    <active>true</active>
    <description>SFI-35</description>
    <label>Valve Section</label>
</RecordType>